--- a/angular-xml-validator/package.json
+++ b/angular-xml-validator/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@angular/animations": "^17.3.9",
     "@angular/cdk": "^17.3.9",
-    "@angular/common": "^17.3.0",
+    "@angular/common": "^17.3.9",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
@@ -24,6 +24,8 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.7",
     "express": "^4.18.2",
+    "marked": "^12.0.2",
+    "ngx-markdown": "^17.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
